packages/build/tests/error/fixtures/early_exit/plugin_slow.js
module.exports = {
  onBuild() {
    process.kill(process.env.TEST_PID)
  },
}
